--- a/src/pages/login-page/login-page.component.html
+++ b/src/pages/login-page/login-page.component.html
@@ -1,1 +1,38 @@
-<p>login-page works!</p>
+<div class="fixed inset-0 z-50 flex items-center justify-center bg-gray-50 bg-opacity-60">
+    <div class="w-full max-w-md mx-4">
+      <div class="bg-white rounded-xl shadow-2xl p-8 border border-lime-200">
+        <h1 class="text-2xl font-bold text-center mb-6 text-blue-600">Вход в систему</h1>
+  
+        <form class="space-y-5">
+          <div class="space-y-1">
+            <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
+            <input
+              id="email"
+              type="email"
+              class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-blue-600"
+            />
+          </div>
+  
+          <div class="space-y-1">
+            <label for="password" class="block text-sm font-medium text-gray-700">Пароль</label>
+            <input
+              id="password"
+              type="password"
+              class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-blue-600"
+            />
+          </div>
+  
+          <button
+            type="submit"
+            class="w-full py-3 px-4 font-semibold rounded-lg shadow-md transition-colors duration-200 bg-lime-400 text-black hover:bg-lime-500 "
+          >
+            Войти
+          </button>
+  
+          <div class="text-center mt-4">
+            <a href="#" class="text-sm font-medium text-blue-600 hover:text-blue-700">Забыли пароль?</a>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
