--- a/src/pages/login-page/login-page.component.scss
+++ b/src/pages/login-page/login-page.component.scss
@@ -1,14 +1,4 @@
-::ng-deep .mat-mdc-form-field .mdc-notched-outline__leading,
-::ng-deep .mat-mdc-form-field .mdc-notched-outline__notch,
-::ng-deep .mat-mdc-form-field .mdc-notched-outline__trailing {
-  border-color: #d1d5db !important; /* gray-300 */
-}
-::ng-deep .mat-mdc-form-field--focused .mdc-notched-outline__leading,
-::ng-deep .mat-mdc-form-field--focused .mdc-notched-outline__notch,
-::ng-deep .mat-mdc-form-field--focused .mdc-notched-outline__trailing {
-  border-color: #2563eb !important; /* blue-600 */
-}
-::ng-deep .mat-mdc-form-field .mat-mdc-text-field-wrapper.mdc-text-field--outlined .mat-mdc-form-field-infix {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
+::placeholder {
+  color: #d1d5db;
+  opacity: 1;
 }
