fix(auth): delete useless methods

--- a/src/pages/forgot-password-page/forgot-password-page.component.html
+++ b/src/pages/forgot-password-page/forgot-password-page.component.html
@@ -36,11 +36,11 @@
                 formControlName="email"
                 placeholder="Введите email"
                 class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-blue-600 text-gray-700 transition-all duration-200"
-                [class.border-red-500]="isEmailInvalid() && (isEmailDirty() || isEmailTouched())"
-                [class.border-green-500]="isEmailInvalid() && (isEmailDirty() || isEmailTouched())"
+                [class.border-red-500]="email?.invalid && (email?.dirty || email?.touched)"
+                [class.border-green-500]="email?.valid && (email?.dirty || email?.touched)"
               />
 
-              @if(isEmailInvalid() && (isEmailDirty() || isEmailTouched())) {
+              @if(email?.invalid && (email?.dirty || email?.touched)) {
                 <div class="text-red-600 text-sm mt-1">
                   @if(email?.errors?.['required']) {
                     <span>Email обязателен</span>
@@ -60,10 +60,7 @@
             <div class="text-center">
               <div class="text-sm font-medium text-black">
                 Вспомнили пароль?
-                <a
-                  (click)="goBackToLogin()"
-                  class="text-sm font-medium text-blue-600 hover:text-blue-700 cursor-pointer"
-                >Войдите в аккаунт!</a>
+                <a href="/login" class="text-sm font-medium text-blue-600 hover:text-blue-700">Войдите в аккаунт!</a>
               </div>
             </div>
 
