--- a/src/pages/registration/ui/registration-page/registration-page.component.html
+++ b/src/pages/registration/ui/registration-page/registration-page.component.html
@@ -27,15 +27,11 @@
                 <svg class="w-5 h-5 mr-2 text-green-500" fill="currentColor" viewBox="0 0 20 20">
                   <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
                 </svg>
-                <span class="font-medium">✅ Регистрация успешно завершена!</span>
+                <span class="font-medium">Для завершения регистрации перейдите пожалуйста по ссылке, высланной на ваш Email</span>
               </div>
-              <button
-                type="button"
-                (click)="onResetForm()"
-                class="mt-3 px-4 py-2 bg-green-100 text-green-700 rounded-lg hover:bg-green-200 transition-colors text-sm font-medium"
-              >
-                Зарегистрировать ещё
-              </button>
+            </div>
+            <div class="text-sm font-medium">
+              <a href="/" class="text-blue-600 hover:text-blue-700">Вернуться на главную</a>
             </div>
           }
 
