--- a/src/app/layouts/top-menu/top-menu.component.html
+++ b/src/app/layouts/top-menu/top-menu.component.html
@@ -1,4 +1,4 @@
-<header class="bg-white text-blue-600 shadow-md-blue-600">
+<header class="bg-white text-blue-600 shadow-md">
     <div class="max-w-[1360px] mx-auto px-4 py-3 flex justify-between items-center">
         <div class="flex items-center space-x-18">
             <div>
