--- a/src/pages/forgot-password/ui/forgot-password-page/forgot-password-page.component.html
+++ b/src/pages/forgot-password/ui/forgot-password-page/forgot-password-page.component.html
@@ -35,7 +35,7 @@
                 type="email"
                 formControlName="email"
                 placeholder="Введите email"
-                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-blue-600 text-gray-700 transition-all duration-200"
+                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-blue-600 transition-all duration-200"
                 [class.border-red-500]="email?.invalid && email?.touched"
                 [class.border-green-500]="email?.valid && email?.touched"
               />
