--- a/src/pages/login/ui/login-page/login-page.component.html
+++ b/src/pages/login/ui/login-page/login-page.component.html
@@ -16,7 +16,7 @@
               id="email"
               type="email"
               placeholder="Введите email"
-              class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-blue-600 text-gray-700"
+              class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-blue-600"
             />
           </div>
 
@@ -28,7 +28,7 @@
                 id="password"
                 [type]="hidePassword ? 'password' : 'text'"
                 placeholder="Введите пароль"
-                class="w-full px-4 py-3 pr-12 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-blue-600 text-gray-700"
+                class="w-full px-4 py-3 pr-12 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-blue-600"
               />
               <button
                 type="button"
