--- a/src/pages/registration/ui/registration-page/registration-page.component.html
+++ b/src/pages/registration/ui/registration-page/registration-page.component.html
@@ -56,7 +56,7 @@
                 id="name"
                 type="text"
                 placeholder="Введите ваше имя"
-                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-blue-600 text-gray-700"
+                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-blue-600"
                 [class.border-red-500]="name?.invalid && name?.touched"
               />
               @if(name?.invalid && name?.touched) {
@@ -73,7 +73,7 @@
                 id="email"
                 type="email"
                 placeholder="Введите email"
-                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-blue-600 text-gray-700"
+                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-blue-600"
                 [class.border-red-500]="email?.invalid && email?.touched"
               />
               @if (email?.invalid && email?.touched) {
@@ -91,7 +91,7 @@
                   id="password"
                   [type]="isPasswordHidden ? 'password' : 'text'"
                   placeholder="Введите пароль"
-                  class="w-full px-4 py-3 pr-12 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-blue-600 text-gray-700"
+                  class="w-full px-4 py-3 pr-12 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-blue-600"
                   [class.border-red-500]="password?.invalid && password?.touched"
                 />
                 <button
@@ -123,7 +123,7 @@
                   id="confirmPassword"
                   [type]="isConfirmPasswordHidden ? 'password' : 'text'"
                   placeholder="Повторите пароль"
-                  class="w-full px-4 py-3 pr-12 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-blue-600 text-gray-700"
+                  class="w-full px-4 py-3 pr-12 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 focus:border-blue-600"
                   [class.border-red-500]="confirmPassword?.invalid && confirmPassword?.touched"
                 />
                 <button
