--- a/src/shared/ui/layouts/top-menu/top-menu.component.html
+++ b/src/shared/ui/layouts/top-menu/top-menu.component.html
@@ -2,7 +2,7 @@
     <div class="max-w-[1360px] mx-auto px-4 py-3 flex justify-between items-center">
         <div class="flex items-center space-x-18">
             <div>
-                <a href="/" class="text-2xl font-bold text-blue-600 hover:text-lime-500 transition-colors">
+                <a href="/public" class="text-2xl font-bold text-blue-600 hover:text-lime-500 transition-colors">
                     ToDoo
                 </a>
             </div>
