--- a/src/shared/ui/layouts/top-menu/top-menu.component.html
+++ b/src/shared/ui/layouts/top-menu/top-menu.component.html
@@ -25,7 +25,7 @@
             <a href="/login" class="flex items-center space-x-1 hover:text-lime-500 "
             (mouseenter)="onHover(true)"
             (mouseleave)="onHover(false)">
-                <img [ngSrc]="userProfileIcon" width="32" height="32" />
+                <img [ngSrc]="userProfileIcon" width="32" height="32"  alt=""/>
                 <div class="text-lg font-medium cursor-pointer transition-colors">
                     Войти в аккаунт
                     <span
