feat: separate main page to sections components, add button component

--- a/src/shared/ui/layouts/main-layout/main-layout.component.html
+++ b/src/shared/ui/layouts/main-layout/main-layout.component.html
@@ -1,2 +1,7 @@
 <app-top-menu></app-top-menu>
+<div class="fixed inset-0 -z-10 overflow-hidden">
+  <div class="absolute top-0 left-0 w-80 h-80 bg-lime-500 rounded-full blur-3xl opacity-40"></div>
+  <div class="absolute top-1/4 right-0 w-72 h-72 bg-blue-600 rounded-full blur-3xl opacity-40"></div>
+</div>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
