--- a/src/shared/ui/layouts/top-menu/top-menu.component.html
+++ b/src/shared/ui/layouts/top-menu/top-menu.component.html
@@ -3,7 +3,7 @@
         <div class="flex items-center space-x-18">
             <div>
                 <a href="/public" class="text-2xl font-bold text-blue-600 hover:text-lime-500 transition-colors">
-                    ToDoo
+                  <img ngSrc="/assets/icons/with_text_18px.svg" alt="Logo" height="30" width="130">
                 </a>
             </div>
 
